<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Android 11 testing</string>
	<string name="output_hint">Output...</string>
	<string name="request_file_perms">Request file permissions</string>
	<string name="show_storage_volumes">Show storage volumes</string>
	<string name="create_test_file">Create test file</string>
	<string name="read_test_file">Read test file</string>
	<string name="create_documents_test_file">Create test file from Documents</string>
	<string name="read_documents_test_file">Read test file from Documents</string>
	<string name="licenses">Open source licenses</string>
	<string name="settings">Settings</string>
	<string name="dark_theme">Dark theme</string>
	<string name="fullscreen">Fullscreen</string>
	<string name="get_host_info">Get Host Info</string>
</resources>