<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fillViewport="true"
	android:layout_centerVertical="true"
	android:layout_centerHorizontal="true"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:gravity="top|center"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/output"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="46dp"
			android:hint="@string/output_hint"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/request_file_perms"
			android:id="@+id/requestFilePermissions"
			android:textAllCaps="false"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_storage_volumes"
			android:id="@+id/showStorageVolumes"
			android:textAllCaps="false"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/get_host_info"
			android:id="@+id/getHostInfo"
			android:textAllCaps="false"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/create_test_file"
			android:id="@+id/createTestFile"
			android:textAllCaps="false"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/read_test_file"
			android:id="@+id/readTestFile"
			android:textAllCaps="false"/>
	</LinearLayout>
</ScrollView>